# rust-mysql-plugin

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  cmake.sh  deploy.sh  docker-compose.yml  test.sh
docker/: Dockerfile
src/: lib.rs
src/cpp/: plugin.c  test.c
